# diploma

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
assets/shaders/: default.frag  default.rchit  default.rgen  default.rmiss  default.vert  ray_common.glsl  shader.h  shader_interface.h  sphere.rchit  sphere.rint
assets/shaders/offscreen/: offscreen.frag  offscreen.vert
assets/trash/: default.frag  default.vert
cmake/: glsl.cmake
src/: camera.cpp  camera.hpp  config.hpp  input.cpp  input.hpp  main.cpp  obj_loader.cpp  obj_loader.hpp  whim.cpp  whim.hpp  window.cpp  window.hpp
src/imgui/: imgui_impl_vulkan.cpp
src/utility/: align.hpp  log.hpp  macros.hpp  types.hpp
src/vk/: context.cpp  context.hpp  loader.cpp  loader.hpp  raytracer.cpp  raytracer.hpp  renderer.cpp  renderer.hpp  result.hpp  types.hpp
